<resources>
    <string name="app_name">FbTutorial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="btn_text_firestore">fireStore_recyclerview</string>
    <string name="firestore_test">FireStore Test</string>
    <string name="add">ADD</string>
    <string name="authentication">Authentication</string>

    <string name="success">Success</string>
    <string name="register_button">register Button</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="authentication_test">Authentication_Test</string>
    <string name="login_button">Login Button</string>
    <string name="success_resetPwd">Password change sent by email</string>
    <string name="reset_password_button">reset password Button</string>
    <string name="test_crash">test_crash</string>
    <string name="crashlytics">Crashlytics</string>
    <string name="set_custom_key">set custom key</string>
    <string name="storage">storage</string>
    <string name="download">download</string>
    <string name="analytics">analytics</string>
    <string name="select_event">select Event()</string>
    <string name="customevent">customEvent</string>
    <string name="set_custom_event">set Custom Event</string>
</resources>