<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="analyticsViewModel"
            type="com.wpfl5.fbtutorial.ui.main.analytics.AnalyticsViewModel" />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.crashlytics.MainCrashlyticsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/analytics"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E6E6E6" />

        <Button
            android:id="@+id/btn_setCustomKey"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/select_event"
            android:layout_margin="12dp"
            android:onClick="@{() -> analyticsViewModel.selectEvent()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_event"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customevent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_setCustomEvent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/set_custom_event"
            android:layout_margin="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>
</layout>
