<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="crashViewModel"
            type="com.wpfl5.fbtutorial.ui.main.crashlytics.CrashlyticsViewModel" />
    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.crashlytics.MainCrashlyticsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/crashlytics"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6E6E6" />


    <Button
        android:id="@+id/btn_setCustomKey"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/set_custom_key"
        android:layout_margin="12dp"
        android:onClick="@{() -> crashViewModel.setCustomKey()}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_testCrash"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/test_crash"
        android:layout_margin="12dp"
        android:onClick="@{() -> crashViewModel.testCrash()}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
</layout>
